# document-intelligence-rag

./: .env.example  .gitignore  README.md  docker-compose.yml  package-lock.json
api-server/: Dockerfile  package-lock.json  package.json
api-server/src/: config.ts  index.ts
api-server/src/api/: chat.ts  documents.ts
api-server/src/cache/: cache-strategy.ts  redis-client.ts
api-server/src/history/: conversation.ts
api-server/src/llm/: generator.ts  prompts.ts
api-server/src/search/: hybrid-search.ts  query-router.ts
api-server/tests/: cache.test.ts  integration.test.ts  search.test.ts
benchmarks/: latency_test.ts  retrieval_quality.py
demo/: demo.ts
docs/: architecture.md  chunking-analysis.md
ingestion-service/: Dockerfile  pyproject.toml
ingestion-service/sample-docs/: generate_sample_docs.py
ingestion-service/src/: chunker.py  config.py  embedder.py  extract.py  main.py  metadata.py  store.py
ingestion-service/tests/: test_chunker.py  test_extraction.py  test_retrieval.py
